see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

17-May-2010 Andrew Eddie
 ^ Fixed issue [#20431] Module cache not activated in defult installation and sample data module parameters

16-May-2010 Mark Dexter
# [#20312] Access Control not implemented in menus
# [#20450] Missing modal and field for single news feed selection
# Sample data fixes (Elin Waring)

16-May-2010 Chris Davenport
$ Translate help screen titles in com_admin

16-May-2010 Ron Severdia
# Fixed CSS and bug in admin login
# IE compatibility fixes

16-May-2010 Sam Moffatt
 # Fixed issue with front end router and invalid menu items
 # Fixed [#20449] Web link submit form is broken (thanks Elin)

16-May-2010 Christophe Demko
 # Fix [#20428] Deleting A Menu Does Not Delete Menu Items
 # Reenabling filters in manage view
 # fix some ACL

16-May-2010 Ron Severdia
# BlueStork fixes, new icons, language fixes

16-May-2010 Jean-Marie Simonet
$ Fixed some Beez language keys
^ Fixed Beez sitedescription
$ Fixed and consolidate some language strings
# Fixed base category description [20447]. Thanks Elin.
$ Fixed some language strings

15-May-2010 Ron Severdia
# Fixed CSS issues with BlueStork
$ Corrected language strings
# Fixed UI exceptions
+ New BlueStork icons

15-May-2010 Chris Davenport
# Fix [20375] Undefined variable in com_admin
# Fixed bad translation of help key references in com_admin

15-May-2010 Mark Dexter
# Fixed issues with sample data (Elin Waring)
^ Added title and subtitle to the params (Angie Radtke)
^ Added joomla_logos (Angie Radtke)
# Updated language file (Angie Radtke)
# Deleted unused image (Angie Radtke)
# Fixed language string (Angie Radtke)