@@ -23,6 +23,7 @@ defined('_JEXEC') or die;
  *
  * @package		Joomla
  * @subpackage	plg_pagebreak
+ * @since		1.6
  */
 class plgContentPagebreak extends JPlugin
 {
@@ -31,11 +32,14 @@ class plgContentPagebreak extends JPlugin
 	 * @param	object	The article object.  Note $article->text is also available
 	 * @param	object	The article params
 	 * @param	int		The 'page' number
+	 *
+	 * @return	void
+	 * @since	1.6
 	 */
-	public function onContentPrepare($context, &$row, &$params, $page=0)
+	public function onContentPrepare($context, &$row, &$params, $page = 0)
 	{
 		// Expression to search for.
-		$regex = '#<hr(.*)class=\"system-pagebreak\"(.*)\/>#iU';
+		$regex = '#<hr(.*)class="system-pagebreak"(.*)\/>#iU';
 
 		$print = JRequest::getBool('print');
 		$showall = JRequest::getBool('showall');
@@ -45,7 +49,7 @@ class plgContentPagebreak extends JPlugin
 		}
 
 		if ($print) {
-			$row->text = preg_replace($regex, '<BR/>', $row->text);
+			$row->text = preg_replace($regex, '<br />', $row->text);
 			return true;
 		}
 
@@ -54,7 +58,7 @@ class plgContentPagebreak extends JPlugin
 			return true;
 		}
 
-		$db = &JFactory::getDbo();
+		$db = JFactory::getDbo();
 		$full = JRequest::getBool('fullview');
 
 		if (!$page) {
@@ -70,19 +74,17 @@ class plgContentPagebreak extends JPlugin
 		$matches = array();
 		preg_match_all($regex, $row->text, $matches, PREG_SET_ORDER);
 
-		if (($showall && $this->params->get('showall', 1)))
-		{
+		if (($showall && $this->params->get('showall', 1))) {
 			$hasToc = $this->params->get('multipage_toc', 1);
-			if ($hasToc)
-			{
+			if ($hasToc) {
 				// Display TOC.
 				$page = 1;
 				$this->_createToc($row, $matches, $page);
-			}
-			else {
+			} else {
 				$row->toc = '';
 			}
-			$row->text = preg_replace($regex, '<BR/>', $row->text);
+			$row->text = preg_replace($regex, '<br />', $row->text);
+
 			return true;
 		}
 
@@ -93,18 +95,16 @@ class plgContentPagebreak extends JPlugin
 		$n = count($text);
 
 		// We have found at least one plugin, therefore at least 2 pages.
-		if ($n > 1)
-		{
+		if ($n > 1) {
 			$title	= $this->params->get('title', 1);
 			$hasToc = $this->params->get('multipage_toc', 1);
+
 			// Adds heading or title to <site> Title.
-			if ($title)
-			{
-				if ($page)
-				{
+			if ($title) {
+				if ($page) {
 					$page_text = $page + 1;
-					if ($page && @$matches[$page-1][2])
-					{
+
+					if ($page && @$matches[$page-1][2]) {
 						$attrs = JUtility::parseAttributes($matches[$page-1][1]);
 
 						if (@$attrs['title']) {
@@ -124,13 +124,17 @@ class plgContentPagebreak extends JPlugin
 				$row->toc = '';
 			}
 
+			// traditional mos page navigation
+			jimport('joomla.html.pagination');
+			$pageNav = new JPagination($n, $page, 1);
+
 			// Page counter.
 			$row->text .= '<div class="pagenavcounter">';
 			$row->text .= $pageNav->getPagesCounter();
 			$row->text .= '</div>';
 
 			// Page text.
-			$text[$page] = str_replace("<hr id=\"\"system-readmore\"\" />", "", $text[$page]);
+			$text[$page] = str_replace('<hr id="system-readmore" />', '', $text[$page]);
 			$row->text .= $text[$page];
 
 			$row->text .= '<br />';
@@ -152,9 +156,12 @@ class plgContentPagebreak extends JPlugin
 		return true;
 	}
 
+	/**
+	 * @return	void
+	 * @return	1.6
+	 */
 	protected function _createTOC(&$row, &$matches, &$page)
 	{
-
 		$heading = $row->title;
 
 		// TOC header.
@@ -180,13 +187,11 @@ class plgContentPagebreak extends JPlugin
 
 		$i = 2;
 
-		foreach ($matches as $bot)
-		{
+		foreach ($matches as $bot) {
 			$link = JRoute::_('&showall=&limitstart='. ($i-1));
 
 
-			if (@$bot[0])
-			{
+			if (@$bot[0]) {
 				$attrs2 = JUtility::parseAttributes($bot[0]);
 
 				if (@$attrs2['alt']) {
@@ -196,8 +201,7 @@ class plgContentPagebreak extends JPlugin
 				} else {
 					$title	= JText::sprintf('Page #', $i);
 				}
-			}
-			else {
+			} else {
 				$title	= JText::sprintf('Page #', $i);
 			}
 
@@ -213,8 +217,7 @@ class plgContentPagebreak extends JPlugin
 			$i++;
 		}
 
-		if ($this->params->get('showall'))
-		{
+		if ($this->params->get('showall')) {
 			$link = JRoute::_('&showall=1&limitstart=');
 			$row->toc .= '
 			<tr>
@@ -229,32 +232,34 @@ class plgContentPagebreak extends JPlugin
 		$row->toc .= '</table>';
 	}
 
+	/**
+	 * @return	void
+	 * @since	1.6
+	 */
 	protected function _createNavigation(&$row, $page, $n)
 	{
-		$pnSpace = "";
-		if (JText::_('JGLOBAL_LT') || JText::_('JGLOBAL_LT')) $pnSpace = " ";
+		$pnSpace = '';
+		if (JText::_('JGLOBAL_LT') || JText::_('JGLOBAL_LT')) {
+			$pnSpace = ' ';
+		}
 
-		if ($page < $n-1)
-		{
+		if ($page < $n-1) {
 			$page_next = $page + 1;
 
 			$link_next = JRoute::_('&limitstart='. ($page_next));
 			// Next >>
 			$next = '<a href="'. $link_next .'">' . JText::_('JNEXT') . $pnSpace . JText::_('JGLOBAL_GT') . JText::_('JGLOBAL_GT') .'</a>';
-		}
-		else {
+		} else {
 			$next = JText::_('JNEXT');
 		}
 
-		if ($page > 0)
-		{
-			$page_prev = $page - 1 == 0 ? "" : $page - 1;
+		if ($page > 0) {
+			$page_prev = $page - 1 == 0 ? '' : $page - 1;
 
 			$link_prev = JRoute::_( '&limitstart='. ($page_prev));
 			// << Prev
 			$prev = '<a href="'. $link_prev .'">'. JText::_('JGLOBAL_LT') . JText::_('JGLOBAL_LT') . $pnSpace . JText::_('JPREV') .'</a>';
-		}
-		else {
+		} else {
 			$prev = JText::_('Prev');
 		}
 
