@@ -28,7 +28,8 @@ $ -> Language fix or change
 ! -> Note
 
 17-May-2010 Andrew Eddie
- ^ Fixed issue [#20431] Module cache not activated in defult installation and sample data module parameters
+ ^ Fixed issue [#20431] Module cache not activated in defult installation and sample data module parameters (Klas Berlič)
+ # Fixed issue [#20445] The pagebreak plugin produces a fatal error.
 
 16-May-2010 Mark Dexter
 # [#20312] Access Control not implemented in menus
